--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-safe-area-context": "4.4.1"
+    "react-native-safe-area-context": "4.4.1",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
